Added some settings and edited docker-compose formatting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.7'
 
 services:
-###############################################################################
-#    Webb app server                                                          #
-###############################################################################
+################################################################################
+# webb app server                                                              #
+################################################################################
   webapp:
     container_name: webapp
     build:
