--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - '3000:3000'
     depends_on: 
       - webapi
+    networks:
+      - network
 ################################################################################
 # Rest API Server                                                              #
 ################################################################################
@@ -24,9 +26,14 @@ services:
       context: webapi
       dockerfile: Dockerfile
     ports:
-      - "8000:80"
+      - "5000:80"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
     depends_on: 
       - database
+      - rabbitmq
+    networks:
+      - network
 ################################################################################
 # PostgreSQL database Server                                                   #
 ################################################################################
@@ -38,6 +45,40 @@ services:
       - database-secrets.env
     volumes:
       - database-data:/var/lib/postgresql/data/ # persist data even if container shuts down
+    networks:
+      - network
+################################################################################
+# RabbitMQ Server                                                              #
+################################################################################
+  rabbitmq:
+    # There is a prebuilt RabbitMQ image; see
+    # https://hub.docker.com/_/rabbitmq/ for details.
+    # This variant is built on Alpine Linux (it's smaller) and includes
+    # the management UI.
+    image: 'rabbitmq:3.6-management-alpine'
+
+    # These ports are exposed on the host; 'hostport:containerport'.
+    # You could connect to this server from outside with the *host's*
+    # DNS name or IP address and port 5672 (the left-hand side of the
+    # colon).
+    ports:
+      # The standard AMQP protocol port
+      - '5672:5672'
+      # HTTP management UI
+      - '15672:15672'
+
+    # Run this container on a private network for this application.
+    # This is necessary for magic Docker DNS to work: other containers
+    # also running on this network will see a host name "rabbitmq"
+    # (the name of this section) and the internal port 5672, even though
+    # that's not explicitly published above.
+    networks:
+      - network
 
 volumes:
   database-data: # named volumes can be managed easier using docker-compose
+
+networks:
+  # Declare our private network.  We must declare one for the magic
+  # Docker DNS to work, but otherwise its default settings are fine.
+  network: {}
